.metadata/.plugins/org.eclipse.cdt.ui/high performance app using mutex lock.build.log
13:28:29 **** Build of configuration Debug for project high performance app using mutex lock ****
make all 
Building file: ../Account.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Account.d" -MT"Account.o" -o "Account.o" "../Account.cpp"
Finished building: ../Account.cpp
 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp:76:31: warning: use of enumeration in a nested name specifier is a C++11 extension [-Wc++11-extensions]
        thread dipositor(threadProc, ThreadType::DEPOSITOR);
                                     ^
../main.cpp:76:9: error: no matching constructor for initialization of 'std::__1::thread'
        thread dipositor(threadProc, ThreadType::DEPOSITOR);
               ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:408:9: note: candidate constructor template not viable: requires single argument '__f', but 2 arguments were provided
thread::thread(_Fp __f)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:289:5: note: candidate constructor not viable: requires 1 argument, but 2 were provided
    thread(const thread&);
    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:296:5: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
    thread() _NOEXCEPT : __t_(_LIBCPP_NULL_THREAD) {}
    ^
../main.cpp:77:32: warning: use of enumeration in a nested name specifier is a C++11 extension [-Wc++11-extensions]
        thread withdrawer(threadProc, ThreadType::WITHDRAWER);
                                      ^
../main.cpp:77:9: error: no matching constructor for initialization of 'std::__1::thread'
        thread withdrawer(threadProc, ThreadType::WITHDRAWER);
               ^          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:408:9: note: candidate constructor template not viable: requires single argument '__f', but 2 arguments were provided
thread::thread(_Fp __f)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:289:5: note: candidate constructor not viable: requires 1 argument, but 2 were provided
    thread(const thread&);
    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:296:5: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
    thread() _NOEXCEPT : __t_(_LIBCPP_NULL_THREAD) {}
    ^
2 warnings and 2 errors generated.
make: *** [main.o] Error 1

13:28:30 Build Finished (took 1s.675ms)

